--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "1.1.6",
     "font-awesome": "4.7.0",
+    "frontend-component-custom-search": "^1.0.7",
     "hls.js": "0.9.0",
     "imports-loader": "0.7.1",
     "jquery": "2.2.4",
