--- a/host_vars/koa_stage/edxapp.yml
+++ b/host_vars/koa_stage/edxapp.yml
@@ -82,3 +82,22 @@ SITE_CONFIGURATION_STORAGE:
         payment_support_email: 'info@raccoongang.com'
 
 EDXAPP_SITE_CONFIGURATION: "{{ SITE_CONFIGURATION_STORAGE if COMMON_ENABLE_DISCOVERY else [] }}"
+# Flag check section
+EDXAPP_ENABLE_LTI_PROVIDER: True
+EDXAPP_ENABLE_COUNTRY_ACCESS: True
+EDXAPP_ENABLE_CORS_HEADERS: True
+EDXAPP_ENABLE_CROSS_DOMAIN_CSRF_COOKIE: True
+EDXAPP_ENABLE_INSTRUCTOR_ANALYTICS: True
+EDXAPP_ENABLE_CORS_HEADERS: True
+EDXAPP_ENABLE_SPECIAL_EXAMS: True
+EDXAPP_ENABLE_VIDEO_UPLOAD_PIPELINE: True
+EDXAPP_ENABLE_OAUTH2_PROVIDER: True
+EDXAPP_ENABLE_BULK_ENROLLMENT_VIEW: True
+EDXAPP_ENABLE_CREDIT_ELIGIBILITY: True
+EDXAPP_CUSTOM_COURSES_EDX: True
+EDXAPP_SHOW_HEADER_LANGUAGE_SELECTOR: True
+EDXAPP_SHOW_FOOTER_LANGUAGE_SELECTOR: True
+EDXAPP_X_FRAME_OPTIONS: “ALLOW“
+EDXAPP_ENABLE_ENROLLMENT_RESET: True
+EDXAPP_ENABLE_MKTG_SITE ?: True
+EDXAPP_ENABLE_PUBLISHER: True
