--- a/host_vars/koa_dev/credentials.yml
+++ b/host_vars/koa_dev/credentials.yml
@@ -43,3 +43,4 @@ CREDENTIALS_REPOS:
 CREDENTIALS_CUSTOM_THEME_PACKAGE:
   - name: 'git+https://gitlab.raccoongang.com/edx/credentials-themes.git@0.2.0#egg=edx_credentials_themes==0.2.0'
     extra_args: '-e'
+CREDENTIALS_THEME_NAME: 'koa-rg'
