chore(RGOeX-42): update PyJWT verstion requirement
It's just an intro commit

Something will be definitely broke

--- a/requirements/edx/base.in
+++ b/requirements/edx/base.in
@@ -125,7 +125,7 @@ pygments                            # Used to support colors in paver command ou
 pyjwkest
 # TODO Replace PyJWT usage with pyjwkest
 # PyJWT 1.6.3 contains PyJWTError, which is required by Apple auth in social-auth-core
-PyJWT>=1.6.3
+PyJWT>1.6.3
 pymongo                             # MongoDB driver
 pynliner                            # Inlines CSS styles into HTML for email notifications
 python-dateutil
