test credentials api settings

--- a/host_vars/koa_dev/edxapp.yml
+++ b/host_vars/koa_dev/edxapp.yml
@@ -88,6 +88,6 @@ SITE_CONFIGURATION_STORAGE:
         payment_support_email: 'info@raccoongang.com'
 
 EDXAPP_SITE_CONFIGURATION: "{{ SITE_CONFIGURATION_STORAGE if COMMON_ENABLE_DISCOVERY else [] }}"
-EDXAPP_CREDENTIALS_INTERNAL_SERVICE_URL: "{{ EDXAPP_LMS_BASE_SCHEME }}://{{ CREDENTIALS_DOMAIN }}"
-EDXAPP_CREDENTIALS_PUBLIC_SERVICE_URL: "{{ EDXAPP_LMS_BASE_SCHEME }}://{{ CREDENTIALS_DOMAIN }}"
+EDXAPP_CREDENTIALS_INTERNAL_SERVICE_URL: "{{ EDXAPP_LMS_BASE_SCHEME }}://{{ CREDENTIALS_DOMAIN }}-test"
+EDXAPP_CREDENTIALS_PUBLIC_SERVICE_URL: "{{ EDXAPP_LMS_BASE_SCHEME }}://{{ CREDENTIALS_DOMAIN }}-test"
 
