Enable LTI provider feature on koa dev

--- a/host_vars/koa_dev/edxapp.yml
+++ b/host_vars/koa_dev/edxapp.yml
@@ -32,6 +32,8 @@ EDXAPP_FEATURES_OVERRIDE:
   RG_DELETE_RETIRED: "{{ COMMON_ENABLE_ACCOUNT_DELETION }}"
   ENABLE_XBLOCK_VIEW_ENDPOINT: true
   ENABLE_ENTERPRISE_INTEGRATION: true
+  # LTI Provider feature
+  ENABLE_LTI_PROVIDER: true
   # RG Analytics
   ENABLE_RG_INSTRUCTOR_ANALYTICS: "{{ COMMON_RG_INSTRUCTOR_ANALYTICS_ENABLE }}"
   # For task grade_collector_stat
