--- a/hosts.yml
+++ b/hosts.yml
@@ -2,9 +2,9 @@
 all:
     hosts:
         koa_dev:
-            ansible_host: 54.170.16.252
-            ansible_port: 22
+            ansible_host: 127.0.0.1
             ansible_user: ubuntu
+            ansible_connection: local
         koa_vanilla:
             ansible_host: 54.72.7.226
             ansible_port: 22
