--- a/host_vars/koa_dev/rg.yml
+++ b/host_vars/koa_dev/rg.yml
@@ -8,10 +8,10 @@ tenancy_type: 'single'
 region_location: ''
 
 # TODO refactor roles/nginx, remove roles/rg-nginx
-use_raccoongang_ssl: yes
-nginx_ssl: yes
-lms_ssl_certificate_key_path: '/etc/nginx/ssl/raccoongang-ssl.key'
-lms_ssl_certificate_path: '/etc/nginx/ssl/raccoongang-ssl.crt'
+use_raccoongang_ssl: no
+nginx_ssl: no
+#lms_ssl_certificate_key_path: '/etc/nginx/ssl/raccoongang-ssl.key'
+#lms_ssl_certificate_path: '/etc/nginx/ssl/raccoongang-ssl.crt'
 
 ## Enable Letsencrypt
 use_letsencrypt: no
