--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,71 +1,40 @@
 stages:
-    - deploy
-    - deploy-vanilla
-    - deploy-stage
-    - deploy-ne
-deploy-dev:
-    stage: deploy
-    image: registry-gitlab.raccoongang.com/owlox-team/configuration:koa-rg-develop
-    variables:
-        ANSIBLE_SSH_KEY: $JENKINS_DEPLOY_KEY
-        ANSIBLE_VAULT_KEY: $DEVOPS_VAULT_KEY
-    environment:
-      name: dev
-      url: https://lms-koa-dev.raccoongang.com/
-    script:
-        - ansible-playbook dev.yml
+  – build
+  – deploy
+
+image: alpine
+
+before_script:
+  – git config –global http.sslVerify false
+
+get_packer:
+  stage: build
+  artifacts:
+    paths:
+    – packer
+  script:
+    – echo "Fetching packer"
+    – wget https://releases.hashicorp.com/packer/1.5.5/packer_1.5.5_linux_amd64.zip
+    – unzip packer_1.5.5_linux_amd64.zip
+    – chmod +x packer
     only:
         - master
     except:
         - tags
     allow_failure: true
 
-deploy-vanilla:
-    stage: deploy-vanilla
-    variables:
-        ANSIBLE_SSH_KEY: $JENKINS_DEPLOY_KEY
-        ANSIBLE_VAULT_KEY: $DEVOPS_VAULT_KEY
-    image: registry-gitlab.raccoongang.com/owlox-team/configuration:koa-rg-develop
-    script:
-        - ansible-playbook vanilla.yml
-    environment:
-        name: vanilla
-        url: https://lms-koa-vanilla.raccoongang.com/
-    only:
-        refs:
-            - master
-        variables:
-            - $ENVIRONMENT_TYPE == "vanilla"
+deploy_openedx:
+  stage: deploy
+  variables:
+      ANSIBLE_SSH_KEY: $JENKINS_DEPLOY_KEY
+      ANSIBLE_VAULT_KEY: $DEVOPS_VAULT_KEY
 
-deploy-stage:
-    stage: deploy-stage
-    variables:
-        ANSIBLE_SSH_KEY: $JENKINS_DEPLOY_KEY
-        ANSIBLE_VAULT_KEY: $DEVOPS_VAULT_KEY
-    image: registry-gitlab.raccoongang.com/owlox-team/configuration:koa-rg-develop
-    script:
-        - ansible-playbook stage.yml
-    environment:
-        name: stage
-        url: https://lms-koa-stage.raccoongang.com/
+  script:
+    – echo "Creating openedx ami"
+    – cd packer
+    – packer build -machine-readable -force packer-build.json
     only:
-        refs:
-            - master
-        variables:
-            - $ENVIRONMENT_TYPE == "stage"
-deploy-ne:
-    stage: deploy-ne
-    variables:
-        ANSIBLE_SSH_KEY: $JENKINS_DEPLOY_KEY
-        ANSIBLE_VAULT_KEY: $DEVOPS_VAULT_KEY
-    image: registry-gitlab.raccoongang.com/owlox-team/configuration:koa-rg-develop
-    script:
-        - ansible-playbook ne.yml
-    environment:
-        name: ne
-        url: https://lms-koa-ne.raccoongang.com/
-    only:
-        refs:
-            - master
-        variables:
-            - $ENVIRONMENT_TYPE == "ne"
+        - master
+    except:
+        - tags
+    allow_failure: true
