--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,27 +1,27 @@
 stages:
-  – build
-  – deploy
+  - build
+  - deploy
 
 image: alpine
 
 before_script:
-  – git config –global http.sslVerify false
+  - git config –global http.sslVerify false
 
 get_packer:
   stage: build
   artifacts:
     paths:
-    – packer
+    - packer
   script:
-    – echo "Fetching packer"
-    – wget https://releases.hashicorp.com/packer/1.5.5/packer_1.5.5_linux_amd64.zip
-    – unzip packer_1.5.5_linux_amd64.zip
-    – chmod +x packer
-    only:
-        - master
-    except:
-        - tags
-    allow_failure: true
+   - echo "Fetching packer"
+   - wget https://releases.hashicorp.com/packer/1.5.5/packer_1.5.5_linux_amd64.zip
+   - unzip packer_1.5.5_linux_amd64.zip
+   - chmod +x packer
+  only:
+      - master
+  except:
+      - tags
+  allow_failure: true
 
 deploy_openedx:
   stage: deploy
@@ -30,11 +30,11 @@ deploy_openedx:
       ANSIBLE_VAULT_KEY: $DEVOPS_VAULT_KEY
 
   script:
-    – echo "Creating openedx ami"
-    – cd packer
-    – packer build -machine-readable -force packer-build.json
-    only:
-        - master
-    except:
-        - tags
-    allow_failure: true
+    - echo "Creating openedx ami"
+    - cd packer
+    - packer build -machine-readable -force packer-build.json
+  only:
+      - master
+  except:
+      - tags
+  allow_failure: true
