--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,10 +28,11 @@ deploy_openedx:
   variables:
       ANSIBLE_SSH_KEY: $JENKINS_DEPLOY_KEY
       ANSIBLE_VAULT_KEY: $DEVOPS_VAULT_KEY
-
   script:
     - echo "Creating openedx ami"
     - cd build
+    - export $ANSIBLE_SSH_KEY
+    - export $ANSIBLE_VAULT_KEY
     - ../packer build -machine-readable -force packer-build.json
   only:
       - master
