--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,4 @@
 stages:
-  - build
   - deploy
 
 image: alpine
@@ -7,33 +6,21 @@ image: alpine
 #before_script:
 #  - apk add git
 
-get_packer:
-  stage: build
-  artifacts:
-    paths:
-    - packer
-  script:
-   - echo "Fetching packer"
-   - wget https://releases.hashicorp.com/packer/1.5.5/packer_1.5.5_linux_amd64.zip
-   - unzip packer_1.5.5_linux_amd64.zip
-   - chmod +x packer
-  only:
-      - master
-  except:
-      - tags
-  allow_failure: true
-
 deploy_openedx:
   stage: deploy
   variables:
       ANSIBLE_SSH_KEY: $JENKINS_DEPLOY_KEY
       ANSIBLE_VAULT_KEY: $DEVOPS_VAULT_KEY
   script:
+    - echo "Fetching packer"
+    - wget https://releases.hashicorp.com/packer/1.5.5/packer_1.5.5_linux_amd64.zip
+    - unzip packer_1.5.5_linux_amd64.zip
+    - chmod +x packer
     - echo "Creating openedx ami"
+    - echo $ANSIBLE_SSH_KEY > raccoon.pem
+    - echo $ANSIBLE_VAULT_KEY > vault_password
     - cd build
-    - export ANSIBLE_SSH_KEY=$ANSIBLE_SSH_KEY
-    - export ANSIBLE_VAULT_KEY=$ANSIBLE_VAULT_KEY
-    - ../packer build -machine-readable -var "ANSIBLE_SSH_KEY=$ANSIBLE_SSH_KEY" -var "ANSIBLE_VAULT_KEY=$ANSIBLE_VAULT_KEY" packer-build.json
+    - ../packer build -machine-readable packer-build.json
   only:
       - master
   except:
