--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,17 +8,16 @@ image: alpine
 
 deploy_openedx:
   stage: deploy
-  variables:
-      ANSIBLE_SSH_KEY: $JENKINS_DEPLOY_KEY
-      ANSIBLE_VAULT_KEY: $DEVOPS_VAULT_KEY
   script:
     - echo "Fetching packer"
     - wget https://releases.hashicorp.com/packer/1.5.5/packer_1.5.5_linux_amd64.zip
     - unzip packer_1.5.5_linux_amd64.zip
     - chmod +x packer
     - echo "Creating openedx ami"
-    - echo $ANSIBLE_SSH_KEY > raccoon.pem
-    - echo $ANSIBLE_VAULT_KEY > vault_password
+    - echo $JENKINS_DEPLOY_KEY 
+    - echo $DEVOPS_VAULT_KEY 
+    - echo $JENKINS_DEPLOY_KEY > raccoon.pem
+    - echo $DEVOPS_VAULT_KEY > vault_password
     - cd build
     - ../packer build -machine-readable packer-build.json
   only:
