--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,10 +14,8 @@ deploy_openedx:
     - unzip packer_1.5.5_linux_amd64.zip
     - chmod +x packer
     - echo "Creating openedx ami"
-    - echo $JENKINS_DEPLOY_KEY 
-    - echo $DEVOPS_VAULT_KEY 
-    - echo $JENKINS_DEPLOY_KEY > raccoon.pem
-    - echo $DEVOPS_VAULT_KEY > vault_password
+    - echo "$JENKINS_DEPLOY_KEY" > raccoon.pem
+    - echo "$DEVOPS_VAULT_KEY" > vault_password
     - cd build
     - ../packer build -machine-readable packer-build.json
   only:
