--- a/host_vars/spectrum_prod/services.yml
+++ b/host_vars/spectrum_prod/services.yml
@@ -26,3 +26,4 @@ COMMON_ENABLE_FILEBEAT: False
 COMMON_ENABLE_SENTRY: False
 COMMON_ENABLE_ENTERPRISE: False
 mysql_host: edx-mysql.ckv36cdjhwew.ap-south-1.rds.amazonaws.com
+memcached_host: edxapp-memcached.zdlmo0.cfg.aps1.cache.amazonaws.com
