--- a/hosts.yml
+++ b/hosts.yml
@@ -1,26 +1,11 @@
 ---
 all:
     hosts:
-        koa_dev:
+        spectrum_prod:
             ansible_host: 127.0.0.1
             ansible_user: ubuntu
             ansible_connection: local
-        koa_vanilla:
-            ansible_host: 54.72.7.226
-            ansible_port: 22
-            ansible_user: ubuntu
-        koa_stage:
-            ansible_host: staging04.raccoongang.com
-            ansible_port: 28148
-            ansible_user: raccoon
-        koa_ne:
-            ansible_host: staging05.raccoongang.com
-            ansible_port: 28171
-            ansible_user: raccoon
     children:
-        koa:
+        spectrum:
             hosts:
-                koa_dev:
-                koa_vanilla:
-                koa_stage:
-                koa_ne:
+                spectrum_prod:
