--- a/host_vars/spectrum_prod/credentials.yml
+++ b/host_vars/spectrum_prod/credentials.yml
@@ -1,6 +1,6 @@
 ---
 # CREDENTIALS_DOMAIN: "credentials-dev-project_name.raccoongang.com"
-CREDENTIALS_DOMAIN: "credentials-koa-dev.raccoongang.com"
+CREDENTIALS_DOMAIN: "credentials-spectrum.raccoongang.com"
 CREDENTIALS_LANGUAGE_CODE: "en-gb"
 CREDENTIALS_SERVICE_USER: "credentials_worker"
 CREDENTIALS_MEDIA_ROOT: "{{ COMMON_BASE_DIR }}/var/credentials/media"
