--- a/host_vars/spectrum_prod/notes.yml
+++ b/host_vars/spectrum_prod/notes.yml
@@ -3,9 +3,9 @@
 EDXAPP_ENABLE_EDXNOTES: false
 EDX_NOTES_API_MYSQL_DB_USER: "edx_notes_api"
 EDX_NOTES_API_MYSQL_DB_NAME: "edx_notes_api"
-EDXAPP_EDXNOTES_PUBLIC_API: "https://notes-api-koa-dev.raccoongang.com/api/v1"
+EDXAPP_EDXNOTES_PUBLIC_API: "https://notes-api-spectrum.raccoongang.com/api/v1"
 EDXAPP_EDXNOTES_INTERNAL_API: "http://localhost:8120/api/v1"
 EDX_NOTES_API_ALLOWED_HOSTS:
 - localhost
-- lms-koa-dev.raccoongang.com
-- notes-api-koa-dev.raccoongang.com
+- lms-spectrum.raccoongang.com
+- notes-api-spectrum.raccoongang.com
