--- a/hosts.yml
+++ b/hosts.yml
@@ -5,7 +5,18 @@ all:
             ansible_host: 127.0.0.1
             ansible_user: ubuntu
             ansible_connection: local
+        spectrum_mongo:
+          ansible_user: ubuntu
+          ansible_host: 13.232.48.66
+          ansible_port: 22
+        spectrum_elasticsearch:
+          ansible_user: ubuntu
+          ansible_host: 13.126.10.207
+          ansible_port: 22
+
     children:
         spectrum:
             hosts:
                 spectrum_prod:
+                spectrum_mongo:
+                spectrum_elasticsearch:
