Added forum from ironwood and replicaset

--- a/host_vars/spectrum_prod/edxapp.yml
+++ b/host_vars/spectrum_prod/edxapp.yml
@@ -22,7 +22,7 @@ NOTIFIER_VERSION: 'open-release/koa.master'
 CREDENTIALS_VERSION: 'koa-rg'
 SANDBOX_ENABLE_NOTES: True
 SANDBOX_ENABLE_BLOCKSTORE: False
-FORUM_VERSION: 'open-release/koa.master'
+FORUM_VERSION: 'open-release/ironwood.master'
 COMMON_CONFIG_NO_LOGGING: False
 DEVPI_SERVER_VERSION: '5.4.0'
 DEVPI_WEB_VERSION: '3.5.2'
@@ -137,3 +137,4 @@ EDXAPP_VIDEO_TRANSCRIPTS_SETTINGS:
   STORAGE_CLASS: "{{ EDXAPP_DEFAULT_FILE_STORAGE }}"
   STORAGE_KWARGS: {}
   DIRECTORY_PREFIX: 'video-transcripts/'
+FORUM_MONGO_URL: "mongodb://{{ FORUM_MONGO_USER }}:{{ FORUM_MONGO_PASSWORD }}@{{ FORUM_MONGO_HOSTS }}:{{ FORUM_MONGO_PORT }}/{{ FORUM_MONGO_DATABASE }}?replicaSet=rs0"
