Added ruby version 2.4.1

--- a/host_vars/spectrum_prod/edxapp.yml
+++ b/host_vars/spectrum_prod/edxapp.yml
@@ -138,3 +138,4 @@ EDXAPP_VIDEO_TRANSCRIPTS_SETTINGS:
   STORAGE_KWARGS: {}
   DIRECTORY_PREFIX: 'video-transcripts/'
 FORUM_MONGO_URL: "mongodb://{{ FORUM_MONGO_USER }}:{{ FORUM_MONGO_PASSWORD }}@{{ FORUM_MONGO_HOSTS }}:{{ FORUM_MONGO_PORT }}/{{ FORUM_MONGO_DATABASE }}?replicaSet=rs0"
+FORUM_RUBY_VERSION: "2.4.1"
