Added correct platform name

--- a/group_vars/spectrum/edxapp.yml
+++ b/group_vars/spectrum/edxapp.yml
@@ -1,5 +1,5 @@
 ---
-EDXAPP_PLATFORM_NAME: "RG Koa"
+EDXAPP_PLATFORM_NAME: "Spectrum Networks Learning Portal"
 EDXAPP_LANG: "en_US.UTF-8"
 EDXAPP_LANGUAGE_CODE: "en"
 EDXAPP_TIME_ZONE: "Europe/Dublin"
