--- a/host_vars/spectrum_prod/edxapp.yml
+++ b/host_vars/spectrum_prod/edxapp.yml
@@ -32,6 +32,7 @@ CERTS_VERSION: 'open-release/koa.master'
 COMMON_RETIREMENT_SERVICE_SETUP: false
 
 EDXAPP_FEATURES_OVERRIDE:
+  SHOW_LANGUAGE_SELECTOR: true
   RG_DELETE_RETIRED: "{{ COMMON_ENABLE_ACCOUNT_DELETION }}"
   ENABLE_XBLOCK_VIEW_ENDPOINT: true
   ENABLE_ENTERPRISE_INTEGRATION: false
