--- a/host_vars/spectrum_prod/edxapp.yml
+++ b/host_vars/spectrum_prod/edxapp.yml
@@ -128,9 +128,12 @@ EDXAPP_PROFILE_IMAGE_BACKEND:
     headers:
       Cache-Control: max-age-{{ EDXAPP_PROFILE_IMAGE_MAX_AGE }}
 EDXAPP_AWS_STORAGE_BUCKET_NAME: "spectrum-edxapp-storage"
-EDXAPP_AWS_S3_CUSTOM_DOMAIN: "s3.ap-south-1.amazonaws.com/{{ EDXAPP_AWS_STORAGE_BUCKET_NAME }}"
+EDXAPP_AWS_S3_CUSTOM_DOMAIN: "s3.us-east-1.amazonaws.com/{{ EDXAPP_AWS_STORAGE_BUCKET_NAME }}"
+EDXAPP_S3_HOST: "s3.us-east-1.amazonaws.com"
+EDXAPP_S3_USE_SIGV4: true
+
 EDXAPP_ENV_EXTRA:
-  AWS_S3_REGION_NAME: 'ap-south-1'
+  AWS_S3_REGION_NAME: 'us-east-1'
   AWS_DEFAULT_ACL: 'public-read'
 EDXAPP_VIDEO_IMAGE_SETTINGS:
   VIDEO_IMAGE_MAX_BYTES : 2097152
